# Core2D

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: entity.hpp  objectsystem.hpp  physicsystem.hpp  renderstrategy.hpp  spacetable.hpp  window.hpp
src/: main.cpp  objectsystem.cpp  physicsystem.cpp  renderstrategy.cpp  spacetable.cpp  window.cpp
